--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>UFO Sightings</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -37,57 +37,59 @@
         </div>
     </div>
     
-    <div class = "container-fluid">
-    <div class="row">
-        <div class="col-md-4">
-             <form>
-                 <p>Filter Search</p>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <label for="date">Enter Date</label>
-                            <input type="text" placeholder="1/10/2010" id="datetime" />
-                        </li>
-                        <li class="list-group-item">
-                            <label for="city">Enter City</label>
-                            <input type="text" id="city" />
-                        </li>
-                        <li class="list-group-item">
-                            <label for="state">Enter State</label>
-                            <input type="text" id="state" />
-                        </li>
-                        <li class="list-group-item">
-                            <label for="country">Enter Country</label>
-                            <input type="text" id="country" />
-                        </li>
-                        <li class="list-group-item">
-                            <label for="shape">Enter Shape</label>
-                            <input type="text" paceholder="triangle" id="shape" />
-                        </li>
-                    </ul>
-                 </form>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-3">
+            <form class="bg-dark">
+                <p>Filter Search</p>
+              </form>
+              <ul class="bg-dark" class="list-group">
+                <li class="bg-dark" class="list-group-item">
+                    <label for="date">Enter Date</label>
+                    <input type="text" placeholder="1/10/2010" id="datetime"/>
+                </li>
+                <li class="bg-dark" class="list-group-item">
+                    <label for="city">Enter a City</label>
+                    <input type="text" placeholder="roswell" id="city"/>
+                </li>
+                <li class="bg-dark" class="list-group-item">
+                    <label for="state">Enter a State</label>
+                    <input type="text" placeholder="ca" id="state"/>
+                </li>
+                <li class="bg-dark" class="list-group-item">
+                    <label for="country">Enter a Country</label>
+                    <input type="text" placeholder="us" id="country"/>
+                </li>
+                <li class="bg-dark" class="list-group-item">
+                    <label for="shape">Enter a Shape</label>
+                    <input type="text" placeholder="circle" id="shape"/>
+                </li>
+              </ul>
+          </div>
+          <div class="col-md-9">
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Country</th>
+                    <th>Shape</th>
+                    <th>Duration</th>
+                    <th>Comments</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+          </div>
         </div>
-            <div class="col-md-9">
-               <table class="table table-striped">
-                    <tbody>
-                        <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>City</th>
-                                <th>State</th>
-                                <th>Country</th>
-                                <th>Shape</th>
-                                <th>Duration</th>
-                                <th>Comments</th>
-                            </tr>
-                        </thead>
-                </tbody>
-                </table>
-    </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+      </div>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>
+                <script src="static/js/data.js"></script>
+                <script src="static/js/app.js"></script>
+        </div>
+        </div>
+      </div>
 </body>
 </html>
 
