--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
     <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
-            <form class="bg-dark">
+            <form>
                 <p>Filter Search</p>
               </form>
-              <ul class="bg-dark" class="list-group">
-                <li class="bg-dark" class="list-group-item">
+              <ul class="list-group">
+                <li class="list-group-item">
                     <label for="date">Enter Date</label>
                     <input type="text" placeholder="1/10/2010" id="datetime"/>
                 </li>
-                <li class="bg-dark" class="list-group-item">
+                <li class="list-group-item">
                     <label for="city">Enter a City</label>
                     <input type="text" placeholder="roswell" id="city"/>
                 </li>
-                <li class="bg-dark" class="list-group-item">
+                <li class="list-group-item">
                     <label for="state">Enter a State</label>
                     <input type="text" placeholder="ca" id="state"/>
                 </li>
-                <li class="bg-dark" class="list-group-item">
+                <li class="list-group-item">
                     <label for="country">Enter a Country</label>
                     <input type="text" placeholder="us" id="country"/>
                 </li>
-                <li class="bg-dark" class="list-group-item">
+                <li class="list-group-item">
                     <label for="shape">Enter a Shape</label>
                     <input type="text" placeholder="circle" id="shape"/>
                 </li>
