--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                 </li>
                 <li class="list-group-item">
                     <label for="city">Enter a City</label>
-                    <input type="text" placeholder="roswell" id="city"/>
+                    <input type="text" placeholder="Atlanta" id="city"/>
                 </li>
                 <li class="list-group-item">
                     <label for="state">Enter a State</label>
-                    <input type="text" placeholder="ca" id="state"/>
+                    <input type="text" placeholder="GA" id="state"/>
                 </li>
                 <li class="list-group-item">
                     <label for="country">Enter a Country</label>
-                    <input type="text" placeholder="us" id="country"/>
+                    <input type="text" placeholder="US" id="country"/>
                 </li>
                 <li class="list-group-item">
                     <label for="shape">Enter a Shape</label>
