--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </div>
       </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>
-                <script src="js/data.js"></script>
-                <script src="js/app.js"></script>
+                <script src="static/js/data.js"></script>
+                <script src="static/js/app.js"></script>
       
 </body>
 </html>
