--- a/static/index.html
+++ b/static/index.html
@@ -84,6 +84,7 @@
           </div>
         </div>
       </div>
+    </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.0/d3.js"></script>
                 <script src="static/js/data.js"></script>
                 <script src="static/js/app.js"></script>
